[package]
name = "the_cards"
version = "0.1.0"
edition = "2021"

[dependencies]
scanner-rust = "2.0.16"
itertools = "0.10.5"
regex = "1.7.0"
paste = "1.0.10"
derive_more = "0.99.17"
serde = { version = "1.0.152", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
crossterm = "0.26.1"

[build-dependencies]
cargo-emit = "0.2.1"
convert_case = "0.6.0"
itertools = "0.10.5"