[package]
name = "the_cards"
version = "0.1.0"
edition = "2021"

[dependencies]
scanner-rust = "*"
itertools = "*"
regex = "*"
paste = "*"
derive_more = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"
rand = "*"
crossterm = "*"
enum_dispatch = "*"

[build-dependencies]
cargo-emit = "*"
convert_case = "*"
itertools = "*"